--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build",
-    "build": "webpack -d && cp src/index.html dist/index.html && npm run server",
-    "build:prod": "webpack -p && cp src/index.html dist/index.html",
-    "server" : "webpack-dev-server --content-base src/ --inline --hot",
+    "build": "webpack -d && npm run server",
+    "build:prod": "webpack -p",
+    "server": "webpack-dev-server --content-base src/ --inline --hot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/rafayTanzeel/Portfolio#readme",
   "dependencies": {
+    "pug": "^2.0.0-rc.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
@@ -30,6 +31,13 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^0.28.5",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.5.3",
+    "pug-html-loader": "^1.1.5",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "webpack": "^3.5.3",
     "webpack-dev-server": "^2.7.1"
   }
