--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.6",
     "pug-html-loader": "^1.1.5",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
