nsp security check and eslint google added

--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "Rafay's Portfolio",
   "main": "index.js",
   "scripts": {
+    "prestart": "npm-run-all --parallel security-check linter",
     "start": "npm run build",
     "build": "webpack -d && npm run server",
     "build:prod": "webpack -p",
     "server": "webpack-dev-server --content-base src/ --inline --hot",
+    "linter": "esw --ignore-path .gitignore --fix ./",
+    "security-check": "nsp check",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -32,9 +35,15 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.5",
+    "eslint": "^4.5.0",
+    "eslint-config-google": "^0.9.1",
+    "eslint-watch": "^3.1.2",
     "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.30.1",
+    "jshint-loader": "^0.8.4",
     "node-sass": "^4.5.3",
+    "npm-run-all": "^4.0.2",
+    "nsp": "^2.7.0",
     "postcss-loader": "^2.0.6",
     "pug-html-loader": "^1.1.5",
     "sass-loader": "^6.0.6",
