--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Rafay's Portfolio",
   "main": "index.js",
   "scripts": {
-    "prestart": "npm-run-all --parallel security-check linter",
     "start": "npm run build",
-    "build": "webpack -d && npm run server",
+    "build": "webpack -d",
     "build:prod": "webpack -p",
     "server": "webpack-dev-server --content-base src/ --inline --hot",
     "linter": "esw --ignore-path .gitignore --fix ./",
@@ -37,8 +36,10 @@
     "css-loader": "^0.28.5",
     "eslint": "^4.5.0",
     "eslint-config-google": "^0.9.1",
+    "eslint-plugin-react": "^7.2.1",
     "eslint-watch": "^3.1.2",
     "extract-text-webpack-plugin": "^3.0.0",
+    "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "jshint-loader": "^0.8.4",
     "node-sass": "^4.5.3",
