fixed package json with linter and security

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Rafay's Portfolio",
   "main": "index.js",
   "scripts": {
+    "prestart": "npm-run-all --parallel security-check linter",
     "start": "npm run build",
-    "build": "webpack -d",
+    "build": "webpack -d && npm run server",
     "build:prod": "webpack -p",
     "server": "webpack-dev-server --content-base src/ --inline --hot",
     "linter": "esw --ignore-path .gitignore --fix ./",
