--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
     "pug": "^2.0.0-rc.3",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-typist": "^1.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
