--- a/package.json
+++ b/package.json
@@ -24,12 +24,10 @@
   },
   "homepage": "https://github.com/rafayTanzeel/Portfolio#readme",
   "dependencies": {
-    "fullpage.js": "^2.9.4",
     "jquery": "^3.2.1",
     "pug": "^2.0.0-rc.3",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-typist": "^1.1.1"
+    "react-dom": "^15.6.1"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
